[gd_scene load_steps=4 format=3 uid="uid://csfhy6xsl4mnq"]

[ext_resource type="Script" uid="uid://cd141ovbhtv66" path="res://scripts/UserInterface/recording_timer.gd" id="1_neysi"]
[ext_resource type="Texture2D" uid="uid://h43bip1van1n" path="res://Assets/sprites/REC.png" id="2_rdqvh"]
[ext_resource type="Texture2D" uid="uid://dyjn5veevqmhr" path="res://Assets/sprites/PLAY.png" id="3_rdqvh"]

[node name="RecordingTimer" type="Control" node_paths=PackedStringArray("label")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_neysi")
label = NodePath("HBoxContainer/Label")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.95
anchor_top = 0.06
anchor_right = 0.95
anchor_bottom = 0.06
grow_horizontal = 0
grow_vertical = 2

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "000.00"
horizontal_alignment = 2
vertical_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(100, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.06
anchor_right = 0.05
anchor_bottom = 0.06
offset_top = -11.5
offset_right = -55.0
offset_bottom = 11.5
size_flags_horizontal = 4

[node name="RecTexture" type="TextureRect" parent="HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
texture = ExtResource("2_rdqvh")
stretch_mode = 2

[node name="PlayTexture" type="TextureRect" parent="HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_rdqvh")
stretch_mode = 2

[node name="Timer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
